update shoppingList function-- 쇼핑리스트 재수정 및 안드로이드 사진 촬영 시도중

--- a/android/app/src/main/res/layout/activity_home.xml
+++ b/android/app/src/main/res/layout/activity_home.xml
@@ -20,10 +20,10 @@
         android:id="@+id/button2"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:text="쇼핑 조회"
+        android:text="상품 검색"
+        android:textSize="40dp"
         tools:layout_editor_absoluteX="-2dp"
-        tools:layout_editor_absoluteY="47dp"
-        android:textSize="40dp"/>
+        tools:layout_editor_absoluteY="47dp" />
 
     <Button
         android:id="@+id/button3"
@@ -43,6 +43,14 @@
         tools:layout_editor_absoluteY="47dp"
         android:textSize="40dp"/>
 
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:text="음성인식"
+        android:textSize="40dp"
+        tools:layout_editor_absoluteX="-2dp"
+        tools:layout_editor_absoluteY="47dp" />
 
 
 </LinearLayout>
