update Home  -- 홈화면 버튼 누르면 설명, 버튼 꾹 누르면 다음 화면 이동 및 설명 추가

--- a/android/app/src/main/res/layout/activity_login.xml
+++ b/android/app/src/main/res/layout/activity_login.xml
@@ -40,7 +40,7 @@
         android:paddingLeft="40dp"
         android:paddingRight="40dp"
         >
-        <EditText
+        <Button
             android:id="@+id/loginID"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -52,7 +52,7 @@
             android:inputType="textPersonName"
             android:hint="ID"
             />
-        <EditText
+        <Button
             android:id="@+id/loginPW"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
