add main -- 장바구니 물건 설명 기능 추가

--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,13 @@
         android:layout_marginBottom="300dp"
         />
 
+    <EditText
+        android:id="@+id/searchText"
+        android:layout_width="match_parent"
+        android:layout_height="60dp">
+
+    </EditText>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
