--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -10,36 +10,82 @@
     <Space
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="300dp"
+        android:layout_marginBottom="200dp"
         />
 
-    <EditText
-        android:id="@+id/searchText"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp">
 
-    </EditText>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:text="검색 : "
+            android:layout_weight="8"
+            android:gravity="center">
+
+        </TextView>
+
+        <EditText
+            android:id="@+id/searchText"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_weight="2"
+            android:text="">
+        </EditText>
+
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="장바구니"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:gravity="center"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:orientation="horizontal">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_weight="7"
+            android:gravity="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:text="담은 갯수 : "/>
+
         <EditText
             android:id="@+id/voiceNum"
             android:layout_gravity="center"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="8"
+            android:layout_height="60dp"
+            android:layout_weight="3"
             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+    </LinearLayout>
 
-        <EditText
-            android:id="@+id/voiceText"
-            android:layout_gravity="center"
-            android:layout_width="match_parent"
-            android:layout_weight="2"
-            android:layout_height="wrap_content"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"></EditText>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:orientation="horizontal">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_weight="8"
+        android:gravity="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:text="품목 : "/>
+
+    <EditText
+        android:id="@+id/voiceText"
+        android:layout_gravity="center"
+        android:layout_width="match_parent"
+        android:layout_weight="2"
+        android:layout_height="wrap_content"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        />
     </LinearLayout>
 
     <Button
