--- a/android/app/src/main/res/layout/activity_location.xml
+++ b/android/app/src/main/res/layout/activity_location.xml
@@ -16,6 +16,7 @@
         android:layout_marginTop="24dp"
         android:layout_height="wrap_content"
         android:text="위치 정보 업데이트 시작" />
+
     <Button
         android:enabled="false"
         android:id="@+id/btn_stop_upds"
@@ -59,5 +60,14 @@
         android:layout_height="wrap_content"
         android:text="업데이트 시간"
         android:id="@+id/txtTime" />
+
+    <Button
+        android:id="@+id/searchProductBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="12dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginRight="12dp"
+        android:text="상품 촬영" />
 
 </LinearLayout>
