--- a/android/app/src/main/res/layout/activity_register_tab.xml
+++ b/android/app/src/main/res/layout/activity_register_tab.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".LoginActivity">
-
+    tools:context=".RegisterActivity">
     <Space
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -14,8 +13,8 @@
         />
 
     <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_gravity="center"
         android:src="@drawable/mainpicture" />
 
@@ -23,7 +22,7 @@
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Log In"
+        android:text="Register"
         android:textSize="30dp"
         android:textStyle="bold"
         />
@@ -41,19 +40,7 @@
         android:paddingRight="40dp"
         >
         <Button
-            android:id="@+id/register"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/input_box1"
-            android:padding="10dp"
-            android:textColor="#222222"
-            android:textColorHint="#999999"
-            android:inputType="textPersonName"
-            android:hint="Register"
-            />
-        <Button
-            android:id="@+id/loginID"
+            android:id="@+id/id"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
@@ -65,7 +52,31 @@
             android:hint="ID"
             />
         <Button
-            android:id="@+id/loginPW"
+            android:id="@+id/password"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/input_box1"
+            android:padding="10dp"
+            android:textColor="#222222"
+            android:textColorHint="#999999"
+            android:inputType="textPersonName"
+            android:hint="Password"
+            />
+        <Button
+            android:id="@+id/name"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/input_box1"
+            android:padding="10dp"
+            android:textColor="#222222"
+            android:textColorHint="#999999"
+            android:inputType="textPersonName"
+            android:hint="이름"
+            />
+        <Button
+            android:id="@+id/grade"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
@@ -74,10 +85,10 @@
             android:textColor="#222222"
             android:textColorHint="#999999"
             android:inputType="textPassword"
-            android:hint="PW"
+            android:hint="시각장애 등급"
             />
         <Button
-            android:id="@+id/loginSubmit"
+            android:id="@+id/registerSubmit"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="login"
@@ -86,4 +97,5 @@
             android:background="@drawable/submitbutton"
             />
     </LinearLayout>
+
 </LinearLayout>
