--- a/android/app/src/main/res/layout/activity_register_tab.xml
+++ b/android/app/src/main/res/layout/activity_register_tab.xml
@@ -91,7 +91,7 @@
             android:id="@+id/registerSubmit"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="login"
+            android:text="회원가입"
             android:textColor="@color/white"
             android:layout_gravity="center"
             android:background="@drawable/submitbutton"
