--- a/android/app/src/main/res/layout/activity_location.xml
+++ b/android/app/src/main/res/layout/activity_location.xml
@@ -70,4 +70,23 @@
         android:layout_marginRight="12dp"
         android:text="상품 촬영" />
 
+    <Button
+        android:id="@+id/nextButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="12dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginRight="12dp"
+        android:text="다음" />
+
+    <Button
+        android:id="@+id/complete"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="12dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginRight="12dp"
+        android:text="완료" />
+
+
 </LinearLayout>
