--- a/android/app/src/main/res/layout/activity_location.xml
+++ b/android/app/src/main/res/layout/activity_location.xml
@@ -62,11 +62,15 @@
         android:id="@+id/txtTime" />
 
     <TextView
+        android:layout_gravity="center_horizontal"
         android:id="@+id/productMainName"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:padding="12dp"
+        android:layout_marginRight="12dp"
+        android:layout_marginLeft="12dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:hint="매대"
-        android:textSize="12dp"
+        android:textSize="18dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Large">
     </TextView>
 
@@ -87,6 +91,16 @@
         android:layout_marginTop="24dp"
         android:layout_marginRight="12dp"
         android:text="다음" />
+
+    <Button
+        android:id="@+id/beforeButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="12dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginRight="12dp"
+        android:text="이전" />
+
 
     <Button
         android:id="@+id/complete"
