--- a/android/app/src/main/res/layout/activity_location.xml
+++ b/android/app/src/main/res/layout/activity_location.xml
@@ -62,13 +62,10 @@
         android:id="@+id/txtTime" />
 
     <TextView
-        android:layout_gravity="center_horizontal"
+        android:gravity="center"
         android:id="@+id/productMainName"
-        android:padding="12dp"
-        android:layout_marginRight="12dp"
-        android:layout_marginLeft="12dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
         android:hint="매대"
         android:textSize="18dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Large">
